cmake_minimum_required(VERSION 3.24)
project(GtkOpenGL)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
file(GLOB HEADS ${CMAME_SOURCE_DIR}/*.h)
file(GLOB SOURS ${CMAKE_SOURCE_DIR}/*.c)
file(GLOB GLSL ${CMAKE_SOURCE_DIR}/*.glsl)
file(COPY ${GLSL} DESTINATION ${CMAKE_BINARY_DIR})
find_package(PkgConfig REQUIRED)
find_package(OpenGL REQUIRED)
pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
include_directories(${GTK3_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR})
link_directories(${GTK3_LIBRARY_DIRS})
add_definitions(${GTK3_CFLAGS_OTHER})
add_executable(${PROJECT_NAME} ${HEADS} ${SOURS})
target_link_libraries(${PROJECT_NAME} ${GTK3_LIBRARIES} ${OPENGL_LIBRARIES})